// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, hasCounter: true, theme: dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #7E7F82 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px 32px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #FBFCFF !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
}
::slotted(textarea[readonly]) {
  border-color: #404044 !important;
  background: #404044 !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #FBFCFF !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #AFB0B3;
}
.counter {
  position: absolute;
  bottom: 6px;
  right: 12px;
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #7E7F82;
  pointer-events: none;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}
@media(min-width:480px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
  }
}

@media(min-width:760px) {
  .label__text {
    position: absolute;
    height: 1px;
    width: fit-content;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
  }
}

@media(min-width:1300px) {
  .label__text {
    position: absolute;
    height: 1px;
    width: fit-content;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
  }
}

@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])) {
    border-color: #FBFCFF !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, hasCounter: true, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #949598 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px 32px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.counter {
  position: absolute;
  bottom: 6px;
  right: 12px;
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #949598;
  pointer-events: none;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}
@media(min-width:480px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
  }
}

@media(min-width:760px) {
  .label__text {
    position: absolute;
    height: 1px;
    width: fit-content;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
  }
}

@media(min-width:1300px) {
  .label__text {
    position: absolute;
    height: 1px;
    width: fit-content;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
  }
}

@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: error, hasCounter: false, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #E7323B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #C51720 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #C51720 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: error, hasCounter: true, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #E7323B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px 32px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #C51720 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.counter {
  position: absolute;
  bottom: 6px;
  right: 12px;
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #949598;
  pointer-events: none;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #C51720 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: none, hasCounter: false, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #949598 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: none, hasCounter: true, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #949598 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px 32px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.counter {
  position: absolute;
  bottom: 6px;
  right: 12px;
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #949598;
  pointer-events: none;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: success, hasCounter: false, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #32B85B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #32B85B;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: success, hasCounter: true, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #32B85B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px 32px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.counter {
  position: absolute;
  bottom: 6px;
  right: 12px;
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #949598;
  pointer-events: none;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #32B85B;
  transition: color var(--p-transition-duration, .24s) ease;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: error, hasCounter: false, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #E7323B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #C51720 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #C51720 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: error, hasCounter: true, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #E7323B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px 32px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #C51720 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.counter {
  position: absolute;
  bottom: 6px;
  right: 12px;
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #949598;
  pointer-events: none;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #C51720 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: none, hasCounter: false, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #949598 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: none, hasCounter: true, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #949598 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px 32px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.counter {
  position: absolute;
  bottom: 6px;
  right: 12px;
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #949598;
  pointer-events: none;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: success, hasCounter: false, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #32B85B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #32B85B;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: success, hasCounter: true, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #32B85B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px 32px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.counter {
  position: absolute;
  bottom: 6px;
  right: 12px;
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #949598;
  pointer-events: none;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #32B85B;
  transition: color var(--p-transition-duration, .24s) ease;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: true, hideLabel: true, state: error, hasCounter: false, theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(textarea) {
  display: block !important;
  width: 100% !important;
  height: auto;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #E7323B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 12px 16px !important;
  min-height: 200px;
  resize: vertical;
}
::slotted(textarea:focus) {
  border-color: #010205 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(textarea[readonly]) {
  border-color: #D8D8DB !important;
  background: #D8D8DB !important;
}
@media(hover:hover) {
  ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #C51720 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(textarea:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #C51720 !important;
  }
}
"
`;
